--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,24 +13,21 @@
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="/lib/bootstrap-icons/font/bootstrap-icons.min.css" asp-append-version="true" />
 
+        <!-- Bootstrap min.css -->
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
+        <!-- Custom css -->
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </head>
 
     <body>
 
         <header>
-
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-
                 <div class="container-fluid">
-
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP.NET_Core_Login</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
 
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
@@ -39,19 +36,14 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
-
             </nav>
-
         </header>
 
         <div class="container">
-
             <main role="main" class="">
                 @RenderBody()
             </main>
-
         </div>
 
         <footer class="border-top footer text-muted">
@@ -60,8 +52,13 @@
             </div>
         </footer>
 
+        <!-- JQuery min.js -->
         <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+
+        <!-- Bootstrap bundle.min.js -->
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+
+        <!-- Custom js -->
         <script src="~/js/site.js" asp-append-version="true" asp-append-version="true"></script>
 
         @await RenderSectionAsync("Scripts", required: false)
