--- a/wwwroot/css/login-page.css
+++ b/wwwroot/css/login-page.css
@@ -1,103 +1,91 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@import url('../css/color/file-colors.css');
+
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: Segoe UI;
 }
 
 #login-body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: url("../images/bg-5.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-clip: border-box;
-    background-attachment: fixed;
-    backdrop-filter: blur(2px);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-#login-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #00000062;
+.login-card {
+  width: 42rem;
+  height: 38rem;
+  box-shadow: 1px 1px 80px #ffffff8e;
+  background-color: var(--main-bg-color);
+  border-radius: 2vh;
 }
 
-.card{
-    width: 70vh;
-    height: 70vh;
-    border: none;
-    box-shadow: 1px 1px 80px #ffffff2c;
-    background-color: #ffffff25;
+.login-card .card-header {
+  border-bottom: 0.5rem solid var(--purple-color);
 }
 
-#login-card .card-header {
-    border-bottom: 0.5em solid #a200ffde;
+.login-card .card-header h1{
+    font-size: 3.5rem;
 }
 
-#login-card .card-header h1{
-    font-size: 3rem;
-}
-
-#login-card .card-header h1 span{
-    color: #a200ffde;
-}
-
-#login-card .card-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #00000074;
+.login-card .card-header h1 span{
+  color: var(--purple-color);
 }
 
 #login-form {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    padding: 1.5vh;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #login-form .form-control:focus {
-    border-color: #ffff;
-    outline: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  border-color: var(--light-color);
+  outline: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
-#login-form .input-group{
-    margin-top: 8vh;
+#login-form .input-group {
+  margin: 4rem auto auto;
 }
 
-#login-form input{
-    border: none;
-    height: 5.5vh;
-}
-
-#toggle-password:hover {
-    color: #a200ffde;
+#login-form input {
+  border: none;
+  background-color: var(--light-color);
+  color: var(--dark-color);
 }
 
 .input-group-text {
-    background-color: #ffff;
-    color: #000000;
-    cursor: pointer;
-    border: none;
+  background-color: var(--light-color);
+  color: var(--dark-color);
+  cursor: pointer;
+  border: none;
 }
 
 #login-btn {
-    width: 16em;
+  width: 16rem;
+}
+
+#login-btn-container {
+  margin: 5rem auto;
+}
+
+#login-btn-container p {
+  margin: 3rem -1rem;
+  padding: 0%;
 }
 
 #login-btn-container button:hover {
-    border-radius: 2vh;
-    transition: ease-in-out 1s;
-    box-shadow: 0.5px 0.5px 4px #ffffffb9;
+  border-radius: 2vh;
+  transition: ease-in-out var(--button-hover-transition-speed);
+  box-shadow: 0.5px 0.5px 4px var(--light-box-shadow);
+}
+
+#toggle-password:hover {
+  color: var(--purple-color);
 }
