--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,13 +1,25 @@
+@import url('./color/file-colors.css');
+
 *{
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+  font-family: Segoe UI;
 }
 
 html {
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+body {
+  background-image: url("../images/bg-5.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-clip: border-box;
+  background-attachment: fixed;
+  color: var(--light-color);
 }
 
 a.navbar-brand {
@@ -17,30 +29,30 @@ a.navbar-brand {
 }
 
 a {
-  color: #0077cc;
+  color: var(--primary-links-color);
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+  color: var(--light-color);
+  background-color: var(--primary-color);
+  border-color: var(--primary-border-color);
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+  color: var(--light-color);
+  background-color: var(--primary-color);
+  border-color: var(--primary-border-color);
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid var(--light-border-top);
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid var(--light-border-top);
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 .25rem .75rem var(--dark-box-shadow)
 }
 
 button.accept-policy {
@@ -52,6 +64,7 @@ button.accept-policy {
   width: 100%;
   height: 20px;
   white-space: nowrap;
+  color: var(--light-color);
 }
 
 @media (min-width: 600px), (max-width: 1800px) {
