--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,33 +18,42 @@
 
         <!-- Custom css -->
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
     </head>
 
     <body>
 
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <nav id="menu" class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom">
+
                 <div class="container-fluid">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP.NET_Core_Login</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <i class="bi bi-list navbar-toggler-icon"></i></button>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
-
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <div class="navbar-collapse collapse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-house-fill me-1"></i> Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-person-fill-gear me-1"></i> Usuários</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-info-circle-fill me-1"></i> Sobre</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="close-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-door-closed-fill me-1"></i> Sair</a>
                             </li>
                         </ul>
                     </div>
                 </div>
+
             </nav>
         </header>
 
-        <div class="container">
-            <main role="main" class="">
-                @RenderBody()
-            </main>
-        </div>
+        <main role="main" class="main-body">
+            @RenderBody()
+        </main>
 
         <footer class="border-top footer text-muted">
             <div class="container">
@@ -60,6 +69,7 @@
 
         <!-- Custom js -->
         <script src="~/js/site.js" asp-append-version="true" asp-append-version="true"></script>
+        <script src="~/js/Animation/logout.js" asp-append-version="true" asp-append-version="true"></script>
 
         @await RenderSectionAsync("Scripts", required: false)
 
