--- a/wwwroot/css/color/file-colors.css
+++ b/wwwroot/css/color/file-colors.css
@@ -5,9 +5,13 @@
   --light-color : #ffff;
   --light-box-shadow: #ffffffb9;
   --light-border-top : #e5e5e5;
+  --light-navlink-border : #e5e5e59a;
   --dark-color: #000000;
+  --navbar-color : #ffffff5c;
+  --navlinks-color: #ffffff1d;
   --dark-box-shadow: #00000016;
   --purple-color: #a200ffde;
+  --purple-hover-color: #a200ff73;
   --main-bg-color: #ffffff25;
-  --button-hover-transition-speed: 0.1s;
+  --button-hover-transition-speed: 0.3s;
 }
