Refatoração das animações js e implementação das models de usuários + Classe Context para gerenciamento do DBA com EF-Core6.0

--- a/Views/Shared/_LayoutLogin.cshtml
+++ b/Views/Shared/_LayoutLogin.cshtml
@@ -33,6 +33,7 @@
 
         <!-- Custom js -->
         <script type="module" src="~/js/PasswordVisibility/passwordToggleFunction.js" asp-append-version="true"></script>
+        <script type="module" src="~/js/Animation/door.js" asp-append-version="true"></script>
 
         @await RenderSectionAsync("Scripts", required: false)
 
