--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -37,7 +37,7 @@
             </div>
 
             <div id="login-btn-container">
-                <button id="login-btn" type="submit" class="btn bg-dark btn-block text-light"><i id="enter" class="bi bi-door-open-fill me-2"></i> Entrar</button>
+                <button id="login-btn" type="submit" class="btn bg-dark btn-block text-light"><i id="enter" class="bi bi-door-closed-fill me-2"></i> Entrar</button>
                 <p class="text-light">Não consegue fazer login? <a href="">Alterar senha.</a></p>
             </div>
 
