--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,77 +2,107 @@
 
 <html lang="pt-br">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="author" content="Gianluca Vialli">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Gianluca Vialli">
 
-        <title>@ViewData["Title"] - Sistema de Login</title>
+    <title>@ViewData["Title"] - Sistema de Login</title>
 
-        <!-- Bootstrap Icons -->
-        <link rel="stylesheet" href="/lib/bootstrap-icons/font/bootstrap-icons.min.css" asp-append-version="true" />
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="/lib/bootstrap-icons/font/bootstrap-icons.min.css" asp-append-version="true" />
 
-        <!-- Bootstrap min.css -->
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <!-- Bootstrap min.css -->
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
 
-        <!-- Custom css -->
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
-    </head>
+    <!-- Custom css -->
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+</head>
 
-    <body>
+<body>
 
-        <header>
-            <nav id="menu" class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom">
+    <header>
+        <nav id="menu" class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom">
 
-                <div class="container-fluid">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP.NET_Core_Login</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <i class="bi bi-list navbar-toggler-icon"></i></button>
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP.NET_Core_Login</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <i
+                        class="bi bi-list navbar-toggler-icon"></i></button>
 
-                    <div class="navbar-collapse collapse">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-house-fill me-1"></i> Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-person-fill-gear me-1"></i> Usuários</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-info-circle-fill me-1"></i> Sobre</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="close-link" asp-area="" asp-controller="Home" asp-action="Index"> <i class="bi bi-door-closed-fill me-1"></i> Sair</a>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i
+                                    class="bi bi-house-fill me-1"></i> Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a title="usuários ..." class="nav-link dropdown-toggle" id="menu-users" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i title="usuários ..." class="bi bi-person-fill-add"></i> Usuários</a>
+                            <ul class="dropdown-menu" aria-labelledby="menu-users">
+
+                                <li> <a class="dropdown-item" asp-controller="" asp-action="">Administradores</a> </li>
+                                <li> <hr class="dropdown-divider"> </li>
+
+                                <li> <a class="dropdown-item" asp-controller="" asp-action="">Clientes</a> </li>
+                                <li> <hr class="dropdown-divider"> </li>
+
+                                <li><a class="dropdown-item" asp-controller="" asp-action="">Visitantes</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a title="usuários ..." class="nav-link dropdown-toggle" id="menu-structures" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i title="usuários ..." class="bi bi-building-fill"></i> Instituições</a>
+                            <ul class="dropdown-menu" aria-labelledby="menu-structures">
+
+                                <li><a class="dropdown-item" asp-controller="" asp-action="">Cadastrar</a> </li>
+                                <li> <hr class="dropdown-divider"> </li>
+
+                                <li><a class="dropdown-item" asp-controller="" asp-action="">Editar</a> </li>
+                                <li> <hr class="dropdown-divider"> </li>
+
+                                <li><a class="dropdown-item" asp-controller="" asp-action="">Excluir</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i
+                                    class="bi bi-info-circle-fill me-1"></i> Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="close-link" asp-area="" asp-controller="Home" asp-action="Index"> <i
+                                    class="bi bi-door-closed-fill me-1"></i> Sair</a>
+                        </li>
+                    </ul>
                 </div>
-
-            </nav>
-        </header>
-
-        <main role="main" class="main-body">
-            @RenderBody()
-        </main>
-
-        <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2024 - ASP.NET_Core_Login - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
-        </footer>
 
-        <!-- JQuery min.js -->
-        <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+        </nav>
+    </header>
 
-        <!-- Bootstrap bundle.min.js -->
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    <main role="main" class="main-body">
+        @RenderBody()
+    </main>
 
-        <!-- Custom js -->
-        <script src="~/js/site.js" asp-append-version="true" asp-append-version="true"></script>
-        <script src="~/js/Animation/logout.js" asp-append-version="true" asp-append-version="true"></script>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2024 - ASP.NET_Core_Login - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
 
-        @await RenderSectionAsync("Scripts", required: false)
+    <!-- JQuery min.js -->
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
 
-    </body>
+    <!-- Bootstrap bundle.min.js -->
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+
+    <!-- Custom js -->
+    <script src="~/js/site.js" asp-append-version="true" asp-append-version="true"></script>
+    <script src="~/js/Animation/door.js" asp-append-version="true" asp-append-version="true"></script>
+
+    @await RenderSectionAsync("Scripts", required: false)
+
+</body>
 
 </html>
