Refatoração do layout + Implementação da classe de contexto para a tabela de usuários

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
         @RenderBody()
     </main>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer">
         <div class="container">
             &copy; 2024 - ASP.NET_Core_Login - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
