--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -79,7 +79,7 @@
         </div>
 
         <div class="form-group">
-            <button title="Cadastrar usuário ..." type="submit" class="btn btn-primary"><i class="bi bi-person-add" title="Cadastrar usuário ..."></i> Salvar</button>
+            <button title="Cadastrar usuário ..." type="submit" class="btn btn-primary me-3"><i class="bi bi-person-add" title="Cadastrar usuário ..."></i> Salvar</button>
             <button asp-controller="" asp-action="" type="submit" class="btn btn-secondary" title="Cancelar cadastro ..."><i class="bi bi-arrow-return-left" title="Cancelar cadastro ..."></i></button>
         </div>
 
