--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,6 +14,10 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
   background-image: url("../images/bg-5.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -23,9 +27,12 @@ body {
 }
 
 .main-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 100%;
-  margin-top: 4rem;
+  height: 85vh;
+  margin-bottom: 2vh;
 }
 
 a.navbar-brand {
@@ -75,10 +82,11 @@ button.accept-policy {
   text-align: center;
   white-space: nowrap;
   color: var(--light-color);
+  background-color: var(--navbar-color);
 }
 
 #user-register-container {
-  height: 40rem;
+  height: 45rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -91,11 +99,15 @@ button.accept-policy {
 }
 
 #user-register-container form {
+  margin-bottom: 1rem;
   height: 100%;
 }
 
 #user-register-container .form-group {
-  margin: 1rem auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 1.8rem auto;
 }
 
 @media (min-width: 600px), (max-width: 1800px) {
