Melhorias e correções de layout e estilização

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -81,14 +81,12 @@
         </nav>
     </header>
 
-    <main role="main" class="main-body">
+    <main role="main" class="container-fluid main-body">
         @RenderBody()
     </main>
 
     <footer class="border-top footer">
-        <div class="container">
-            &copy; 2024 - ASP.NET_Core_Login - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        <span> &copy; 2024 - ASP.NET_Core_Login - <a href="">Privacy</a> </span>
     </footer>
 
     <!-- JQuery min.js -->
