--- a/wwwroot/css/color/file-colors.css
+++ b/wwwroot/css/color/file-colors.css
@@ -7,11 +7,10 @@
   --light-border-top : #e5e5e5;
   --light-navlink-border : #e5e5e59a;
   --dark-color: #000000;
-  --navbar-color : #ffffff5c;
+  --navbar-color : #3C3C3C;
   --navlinks-color: #ffffff1d;
   --dark-box-shadow: #00000016;
-  --purple-color: #a200ffde;
-  --purple-hover-color: #a200ff73;
+  --purple-color: #512DA8;
   --main-bg-color: #ffffff25;
   --button-hover-transition-speed: 0.3s;
 }
