Correções de layout e implmentação da lógica básica de cadastro de usuários

--- a/Views/Shared/_LayoutLogin.cshtml
+++ b/Views/Shared/_LayoutLogin.cshtml
@@ -32,8 +32,8 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
 
         <!-- Custom js -->
-        <script type="module" src="~/js/Animation/togglePasswordVisibility.js" asp-append-version="true"></script>
-        <script type="module" src="~/js/Animation/door.js" asp-append-version="true"></script>
+        <script type="module" src="~/js/animation/togglePasswordVisibility.js" asp-append-version="true"></script>
+        <script type="module" src="~/js/animation/door.js" asp-append-version="true"></script>
 
         @await RenderSectionAsync("Scripts", required: false)
 
