--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/user/register.css" asp-append-version="true" />
 </head>
 
 <body>
@@ -97,7 +98,7 @@
 
     <!-- Custom js -->
     <script src="~/js/site.js" asp-append-version="true" asp-append-version="true"></script>
-    <script type="module" src="~/js/Animation/door.js" asp-append-version="true"></script>
+    <script type="module" src="~/js/animation/door.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
