Refatoração de layout e melhorias de estilização e layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -98,6 +98,7 @@
 
     <!-- Custom js -->
     <script src="~/js/site.js" asp-append-version="true" asp-append-version="true"></script>
+    <script type="module" src="~/js/animation/togglePasswordVisibility.js" asp-append-version="true"></script>
     <script type="module" src="~/js/animation/door.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
