--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -29,7 +29,7 @@
                 <input class="form-control form-control-lg" id="login-name" placeholder="Nome de usuário ..." autocomplete="username">
             </div>
 
-            <div class="input-group">
+            <div class="input-group pass">
                 <span class="input-group-text bg-dark text-light"><i class="bi bi-lock-fill"></i></span>
                 <label for="login-password" hidden>Senha:</label>
                 <input type="password" id="login-password" class="form-control form-control-lg" placeholder="Insira sua senha ..." autocomplete="current-password">
