--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -19,23 +19,23 @@
 
         <div class="col-md-6">
 
-            <div class="form-group">
-                <label class="form-label" for="user-name" hidden></label>
+            <div class="input-group">
+                <label for="user-name" hidden></label>
                 <input type="text" class="form-control" id="user-name" name="Name" placeholder="Nome completo" maxlength="50" minlength="10" asp-for="Name" autocomplete="name">
             </div>
 
-            <div class="form-group">
-                <label class="form-label" for="user-login" hidden></label>
+            <div class="input-group">
+                <label for="user-login" hidden></label>
                 <input type="text" class="form-control" id="user-login" name="login" placeholder="Nome de login" maxlength="35" minlength="10" asp-for="Login" autocomplete="username">
             </div>
 
-            <div class="form-group">
-                <label class="form-label" for="user-email" hidden></label>
+            <div class="input-group">
+                <label for="user-email" hidden></label>
                 <input type="text" class="form-control" id="user-email" name="email" placeholder="Informe seu e-mail" asp-for="Email" autocomplete="email">
             </div>
 
-            <div class="form-group">
-                <label class="form-label" for="user-cellphone" hidden></label>
+            <div class="input-group">
+                <label for="user-cellphone" hidden></label>
                 <input type="text" class="form-control" id="user-cellphone" name="cellphone" placeholder="(XX) XXXXX-XXXX" asp-for="CellPhone" autocomplete="tel">
             </div>
 
@@ -43,24 +43,26 @@
 
         <div class="col-md-6">
 
-            <div class="form-group">
-                <label class="form-label" for="user-workplace" hidden></label>
+            <div class="input-group">
+                <label for="user-workplace" hidden></label>
                 <input type="text" class="form-control" id="user-workplace" name="workplace" placeholder="Local de trabalho" asp-for="Workplace" autocomplete="organization">
             </div>
 
-            <div class="form-group">
-                <label class="form-label" for="user-Position" hidden></label>
+            <div class="input-group">
+                <label for="user-Position" hidden></label>
                 <input type="text" class="form-control" id="user-Position" name="Position" placeholder="Seu cargo" maxlength="35" minlength="9" asp-for="Position" autocomplete="organization-title">
             </div>
 
-            <div class="form-group">
-                <label class="form-label" for="user-Password" hidden></label>
+            <div class="input-group pass">
+                <label for="user-Password" hidden></label>
                 <input type="password" class="form-control" id="user-Password" name="password" placeholder="Informe uma senha" maxlength="100" asp-for="Password" autocomplete="new-password">
+                <a title="Exibir Senha" class="input-group-text" id="user-toggle-password"><i title="Exibir Senha" id="user-password-icon" class="bi bi-eye-slash-fill"></i></a>
             </div>
 
-            <div class="form-group">
-                <label class="form-label" for="user-confPass" hidden></label>
+            <div class="input-group pass">
+                <label for="user-confPass" hidden></label>
                 <input type="password" class="form-control" id="user-confPass" name="confirmPass" placeholder="Confirme sua senha" maxlength="100" autocomplete="new-password">
+                <a title="Exibir Senha" class="input-group-text" id="user-toggle-confpassword"><i title="Exibir Senha" id="user-confpassword-icon" class="bi bi-eye-slash-fill"></i></a>
             </div>
 
         </div>
