--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -36,11 +36,9 @@
                 <a title="Exibir Senha" class="input-group-text" id="toggle-password"><i title="Exibir Senha" id="password-icon" class="bi bi-eye-slash-fill"></i></a>
             </div>
 
-            <div id="login-btn-container">
-                <button id="login-btn" type="submit" class="btn bg-dark btn-block text-light"><i id="enter" class="bi bi-door-closed-fill me-2"></i> Entrar</button>
-                <p class="text-light">Não consegue fazer login? <a href="">Alterar senha.</a></p>
-            </div>
-
+            <button id="login-btn" type="submit" class="btn bg-dark btn-block text-light"><i id="enter" class="bi bi-door-closed-fill me-2"></i> Entrar</button>
+            <p class="text-light mt-0">Não consegue fazer login? <a href="">Alterar senha.</a></p>
+       
         </form>
 
     </div>
