--- a/wwwroot/css/user/register.css
+++ b/wwwroot/css/user/register.css
@@ -27,13 +27,30 @@
     height: 70%;
 }
 
-#user-register-container .form-group, .input-group {
-    margin: 1.8rem auto;
+#user-register-container .form-group,
+#user-register-container .input-group {
+    margin: 1.6rem auto;
 }
 
 .btn-user-register {
     display: flex;
     align-items: center;
+}
+
+#user-password {
+    border-radius: 0.5vh 0vh 0vh 0.5vh;
+}
+
+#user-toggle-password {
+    border-radius: 0vh 0.5vh 0.5vh 0vh;
+}
+
+#user-confPass {
+    border-radius: 0.5vh 0vh 0vh 0.5vh;
+}
+
+#user-toggle-confpassword {
+    border-radius: 0vh 0.5vh 0.5vh 0vh;
 }
 
 @media (max-width: 600px) {
