--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                                     class="bi bi-info-circle-fill me-1"></i> Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="close-link" asp-area="" asp-controller="Home" asp-action="Index"> <i
+                            <a class="nav-link" id="close-link" asp-area="" asp-controller="Login" asp-action="Logout"> <i
                                     class="bi bi-door-closed-fill me-1"></i> Sair</a>
                         </li>
                     </ul>
