Implementando nnova lógica para a geração dos tokens de sessão para usuários

--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -114,7 +114,7 @@
 
         </div>
 
-        <div class="col-md-12 position-relative mb-3">
+        <div id="usertype-register" class="position-relative">
             <label class="form-label" for="userType" hidden></label>
             <select class='form-select @Html.GetErrorClassFor("UserType")' name="usertype" id="userType"
                 asp-for="UserType" required>
