--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,59 +26,7 @@
 
     <header>
         <nav id="menu" class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom">
-
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP.NET_Core_Login</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <i
-                        class="bi bi-list navbar-toggler-icon"></i></button>
-
-                <div class="navbar-collapse collapse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i
-                                    class="bi bi-house-fill me-1"></i> Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a title="usuários ..." class="nav-link dropdown-toggle" id="menu-users" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i title="usuários ..." class="bi bi-person-fill-add"></i> Usuários</a>
-                            <ul class="dropdown-menu" aria-labelledby="menu-users">
-
-                                <li> <a class="dropdown-item" asp-controller="Users" asp-action="Register">Administradores</a> </li>
-                                <li> <hr class="dropdown-divider"> </li>
-
-                                <li> <a class="dropdown-item" asp-controller="" asp-action="">Clientes</a> </li>
-                                <li> <hr class="dropdown-divider"> </li>
-
-                                <li><a class="dropdown-item" asp-controller="" asp-action="">Visitantes</a></li>
-
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a title="usuários ..." class="nav-link dropdown-toggle" id="menu-structures" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i title="usuários ..." class="bi bi-building-fill"></i> Instituições</a>
-                            <ul class="dropdown-menu" aria-labelledby="menu-structures">
-
-                                <li><a class="dropdown-item" asp-controller="" asp-action="">Cadastrar</a> </li>
-                                <li> <hr class="dropdown-divider"> </li>
-
-                                <li><a class="dropdown-item" asp-controller="" asp-action="">Editar</a> </li>
-                                <li> <hr class="dropdown-divider"> </li>
-
-                                <li><a class="dropdown-item" asp-controller="" asp-action="">Excluir</a></li>
-
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"> <i
-                                    class="bi bi-info-circle-fill me-1"></i> Sobre</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="close-link" asp-area="" asp-controller="Login" asp-action="Logout"> <i
-                                    class="bi bi-door-closed-fill me-1"></i> Sair</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
+            @await Component.InvokeAsync("Menu")
         </nav>
     </header>
 
@@ -87,7 +35,7 @@
     </main>
 
     <footer class="border-top footer">
-        <span> &copy; 2024 - ASP.NET_Core_Login - <a href="">Privacy</a> </span>
+        <span> &copy;</span> 2023 - ASP.NET Coe Login - Sistema de login e autenticação de usuários - <span> <i class="bi bi-calendar-event"></i> @DateTime.Now.ToString("dd/MM/yyyy") </span>
     </footer>
 
     <!-- JQuery min.js -->
